-fixed gap

--- a/style.scss
+++ b/style.scss
@@ -97,6 +97,7 @@ footer {
       text-align: center;
     }
     nav {
+      top: 77px;
       padding-bottom: 5px;
       text-align: center;
       ul {
